fix spacing between paragraph and button

--- a/src/Components/MainTableView/DeleteTuple.css
+++ b/src/Components/MainTableView/DeleteTuple.css
@@ -48,7 +48,12 @@ button.checkDependencies:hover {
   color: white;
 }
 
-div.dependencies {
+button.confirmDeletion {
+  margin-bottom: 24px;
+}
+
+div.dependencies p {
+  margin: 0;
 }
 
 div.deleting {
